crates/roughly/tests/snapshots/test_format__repeat__basic.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
repeat {
  body
}

repeat {
  body
}
