crates/roughly/tests/snapshots/test_format__repeat__no_auto_braces_if_comment.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
repeat # 1
{
  body
}
repeat # 1
{
  body
}
